Bug 632544 – Cannot send a locked message with PRESERVE_SERIAL flag

https://bugzilla.gnome.org/show_bug.cgi?id=632544

Signed-off-by: David Zeuthen <davidz@redhat.com>